# Lab-4-SIMD-and-vectorization

./: CMakeLists.txt  main.c
mine/: main_drivers.c  main_drivers.h  matmat.c  matmat_auto.c  matvec.c  util.c  util.h
src/: main_drivers.c  matvec_auto.c  sse_methods.c  util.c
